kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    url: apmp.mf.platform
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operation-angular
  namespace: dashboard
  labels:
    app: operation-angular
spec:
  selector:
    matchLabels:
      app: operation-angular
  template:
    metadata:
      labels:
        app: operation-angular
    spec:
      imagePullSecrets:
      - name: harbor-nutanix-dashboard
      containers:
      - name: operation-angular
        # image: mctdis/operation-angular:v1
        image: nginx
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
      restartPolicy: Always

---
# SERVICE
# add in entry for ingress in ingress repo and run jenkins pipeline for ingress to update 
apiVersion: v1
kind: Service
metadata:
  name: operation-angular
  namespace: dashboard
  labels:
    app: operation-angular
spec:
  ports:
  - targetPort: 80
    port: 80
    protocol: TCP
  selector:
    app: operation-angular
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-development
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  ingressClassName: nginx
  rules:
  - host: apmp.mf.platform
    http:
      paths:
      - path: /dashboard/operation(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: operation-angular
            port: 
              number: 80
  tls:
  - hosts:
    - apmp.mf.platform
    secretName: apmp.mf.platform-secret
